Fix overlapping and make equal button orange

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
     display: flex;
     flex-direction: column;
     background-color: hsl(0, 0%, 30%);
+    overflow: hidden;
 }
 
 .output {
@@ -56,7 +57,6 @@ button {
 
 #equal {
     background-color: hsl(39, 100%, 50%);
-
 }
 
 
